--- a/gallery-filter-server/build.gradle
+++ b/gallery-filter-server/build.gradle
@@ -14,6 +14,10 @@ configurations {
 	}
 }
 
+bootRun {
+    classpath = sourceSets.main.runtimeClasspath + configurations.developmentOnly
+}
+
 repositories {
 	mavenCentral()
     mavenLocal()
