engineプロジェクトの依存関係が別検証で汚れていたのを修正

--- a/gallery-filter-engine/Dockerfile
+++ b/gallery-filter-engine/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.9.6-slim
 COPY requirements.txt /
-RUN apt install -y g++
+RUN apt update && apt install -y g++
 RUN pip install -r requirements.txt
-COPY gallery-filter-engine /gallery-filter-engine
+COPY app /app
 COPY resources /resources
-ENV FLASK_APP=gallery-filter-engine/main.py
 ENTRYPOINT [ "flask", "run", "--host", "0.0.0.0"]
